--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
