--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prod": "webpack --display-modules --display-chunks --config client/webpack.prod.config.js",
-    "dev": "webpack-dev-server"
+    "dev": "webpack --watch"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
