--- a/package.json
+++ b/package.json
@@ -16,45 +16,44 @@
     "dev": "webpack --watch"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.2",
+    "aliyun-sms-node": "^1.1.3",
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
+    "body-parser": "~1.13.2",
     "bundle-loader": "^0.5.5",
+    "canvas": "^1.6.6",
     "clean-webpack-plugin": "^0.1.17",
+    "connect-redis": "^3.3.0",
+    "cookie-parser": "~1.3.5",
     "css-loader": "^0.28.7",
+    "debug": "~2.2.0",
+    "ejs": "^2.5.6",
+    "express": "~4.13.1",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.15.4",
     "extract-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.4.2",
-    "node-sass": "^4.6.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
-    "body-parser": "~1.13.2",
-    "connect-redis": "^3.3.0",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "ejs": "^2.5.6",
-    "express": "~4.13.1",
-    "express-partials": "^0.3.0",
-    "express-session": "^1.15.4",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "mysql": "^2.13.0",
+    "node-sass": "^4.6.0",
     "nodexcn": "^0.0.7",
     "redis": "^2.7.1",
+    "sass-loader": "^6.0.6",
     "serve-favicon": "~2.3.0",
+    "style-loader": "^0.19.0",
     "ueditor": "^1.2.3",
-    "aliyun-sms-node": "^1.1.3",
-    "canvas": "^1.6.6",
-    "verify-code": "^0.1.6"
+    "url-loader": "^0.6.2",
+    "verify-code": "^0.1.6",
+    "webpack": "^3.8.1"
   }
 }
