--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prod": "webpack --display-modules --display-chunks --config webpack.prod.config.js",
-    "dev": "webpack-dev-server"
+    "dev": "node webpack.dev.config.js"
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
@@ -34,6 +34,7 @@
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "express": "^4.14.0"
   }
 }
