--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "FW Music",
-  "name": "FW的音乐小屋",
+  "short_name": "CoilingDragon",
+  "name": "盘龙",
   "icons": [
     {
       "src": "favicon.ico",
