--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.0.16"
+    "react-scripts": "^1.0.16",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
