--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bundle-loader": "^0.5.5",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
+    "expose-loader": "^0.7.5",
     "express": "^4.14.0",
     "extract-loader": "^1.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
