--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.16",
-    "redux": "^4.0.0"
+    "react-three-renderer": "^3.2.4",
+    "redux": "^4.0.0",
+    "three": "^0.94.0"
   },
   "scripts": {
     "start": "react-scripts start",
